<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/overflowMenu"
        android:icon="@drawable/ic_3_dots"
        android:title=""
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/drawer_menu_item_1"
                android:title="@string/drawer_menu_item_title_1"
                android:checked="true"
                app:showAsAction="never"/>
            <item
                android:id="@+id/drawer_menu_item_2"
                android:title="@string/drawer_menu_item_title_2"
                app:showAsAction="never" />
            <item
                android:id="@+id/drawer_menu_item_3"
                android:title="@string/drawer_menu_item_title_3"
                app:showAsAction="never"/>
            <item
                android:id="@+id/drawer_menu_item_4"
                android:title="@string/drawer_menu_item_title_4"
                app:showAsAction="never"/>
            <item
                android:id="@+id/drawer_menu_item_5"
                android:title="@string/drawer_menu_item_title_5"
                app:showAsAction="never" />
<!--            <item-->
<!--                android:id="@+id/drawer_menu_item_6"-->
<!--                android:title="@string/drawer_menu_item_title_6"-->
<!--                app:showAsAction="never" />-->
<!--            <item-->
<!--                android:id="@+id/drawer_menu_item_7"-->
<!--                android:title="@string/drawer_menu_item_title_7"-->
<!--                app:showAsAction="never" />-->
        </menu>
    </item>
</menu>